Implement recursive macro parser

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,7 @@
             "type": "lldb",
             "request": "launch",
             "name": "Debug executable 'tangle'",
+            "sourceLanguages": ["rust"],
             "cargo": {
                 "args": [
                     "build",
