Rework - Re-implement top-level macro invocation in lexer (nested not yet supported) - Re-implement stringize macro

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ edition = "2021"
 test-case = "*"
 criterion = "0.5.1"
 
+[[bin]]
+name = "tangle"
+path = "src/bin.rs"
+
 [[bench]]
 name = "bench_lexer"
 harness = false
